fix: Make the browser scrollbars and other native controls consistent with the app's color theme.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,1 +1,5 @@
 @import '@unocss/reset/tailwind.css';
+
+.dark {
+    color-scheme: dark;
+}
